--- a/books.html
+++ b/books.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Musa and Cynthia Library</title>
+    <title>MnC Library</title>
 </head>
 <body>
     <h1>Welcome to our library</h1>
