--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hujambo</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Book Recommendations</title>
+</head>
+<body>
+  <h1>Book Recommendations</h1>
+  </body>
+</html>
